<resources>
    <string name="app_name">Ada Dosen?</string>
    <string name="content_authority">com.digitcreativestudio.safian.adadosen</string>
    <string name="title_activity_main">Daftar Dosen</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_options">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>
    <string name="action_change_password">Ubah password</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_change_password">Ubah Password</string>
    <string name="action_login">Login</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
</resources>
